@startuml FastBite_State_OrderItem
title FastBite - Estados de Item de Encomenda (OrderItemStatus)

skinparam shadowing false

[*] --> PENDING : item é copiado do carrinho\npara a encomenda

PENDING --> PREPARING : cozinha inicia preparação\ndeste item específico
PENDING --> CANCELLED : item fica indisponivel\nantes de ser preparado

PREPARING --> READY : item fica pronto para seguir\ncom o resto do pedido
PREPARING --> CANCELLED : falha durante preparação\nou rutura de stock

READY --> [*]
CANCELLED --> [*]

note right of READY
  Fluxo esperado de negócio.
  Na implementação atual, updateOrderItemStatus
  apenas valida valores do enum e não impõe
  guardas estritas de transição entre estados.
end note

@enduml
